--- a/emacs.org
+++ b/emacs.org
@@ -61,3 +61,18 @@
    (auto-package-update-maybe)
    (auto-package-update-at-time "09:00"))
 #+end_src
+
+* Basic UI settings
+#+begin_src emacs-lisp
+(setq inhibit-startup-message t)
+
+(scroll-bar-mode -1)        ; Disable visible scrollbar
+(tool-bar-mode -1)          ; Disable the toolbar
+(tooltip-mode -1)           ; Disable tooltips
+(set-fringe-mode 10)        ; Give some breathing room
+
+(menu-bar-mode -1)          ; Disable the menu bar
+
+;; Set up the visible bell
+(setq visible-bell t)
+#+end_src
