add org bullet headings

--- a/emacs.org
+++ b/emacs.org
@@ -134,3 +134,15 @@
     (holy/set-font-faces))
 
 #+END_SRC
+
+* org bullet headings
+#+BEGIN_SRC emacs-lisp
+(use-package org-bullets
+  :after org
+  :hook (org-mode . org-bullets-mode)
+  :custom
+  (org-bullets-bullet-list '("◉" "○" "▶" "●" "○" "●")))
+(font-lock-add-keywords 'org-mode
+                        '(("^ *\\([-]\\) "
+                           (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
+#+END_SRC
