--- a/emacs.org
+++ b/emacs.org
@@ -239,3 +239,11 @@
   :init
   (undo-tree-mode))
 #+END_SRC
+
+* neo tree
+#+BEGIN_SRC emacs-lisp
+  (use-package neotree
+    :ensure t)
+  (setq neo-theme (if (display-graphic-p) 'icons 'arrow))
+  (global-set-key (kbd "C-c t") 'neotree-toggle)
+#+END_SRC
