--- a/emacs.org
+++ b/emacs.org
@@ -352,3 +352,14 @@
   (add-to-list 'load-path "/Users/holy/.emacs.d/lisp/quicklisp")
   )
 #+END_SRC
+* transpose window
+#+BEGIN_SRC emacs-lisp
+    (use-package buffer-move
+    :ensure t
+    :config
+    (global-set-key (kbd "<C-S-up>")     'buf-move-up)
+    (global-set-key (kbd "<C-S-down>")   'buf-move-down)
+    (global-set-key (kbd "<C-S-left>")   'buf-move-left)
+    (global-set-key (kbd "<C-S-right>")  'buf-move-right)
+    )
+#+END_SRC
